1999-07-9  Michael Hanni  <mhanni@sprintmail.com>

	* nstabview.m: this is a must see. it really works quite well.