@@ -75,7 +75,8 @@ nscursor_OBJC_FILES = nscursor.m ColorView.m
 nsimage_OBJC_FILES = nsimage.m ImageView.m
 nsimagecell_OBJC_FILES = nsimagecell.m
 nsscroller_OBJC_FILES = nsscroller.m
-nstabview_OBJC_FILES = nstabview.m TestView.m ColorView.m
+nstabview_OBJC_FILES = nstabview.m GSImageTabViewItem.m
+nstabview_RESOURCE_FILES = Smiley.tiff
 scrollview2_OBJC_FILES = scrollview2.m
 scrollview_OBJC_FILES = scrollview.m TestView.m
 slider_OBJC_FILES = slider.m
